--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23",
-    "ng2-password-strength-bar": "1.0.0"
+    "stompjs": "2.3.3",
+    "ng2-password-strength-bar": "1.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.8",
+    "angular2-highcharts": "^0.4.1",
+    "ng2-bootstrap": "^1.1.5"
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.2.3",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
+    "@types/stompjs": "~2.3.0",
     "angular-cli": "1.0.0-beta.22-1",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
