--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "protractor": "4.0.14",
     "ts-node": "2.0.0",
     "tslint": "^4.0.2",
-    "typescript": "~2.1.4",
+    "typescript": "2.0.10",
     "webdriver-manager": "11.1.0"
   }
 }
