--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.4.1",
-    "@angular/compiler": "2.4.1",
-    "@angular/core": "2.4.1",
-    "@angular/forms": "2.4.1",
-    "@angular/http": "2.4.1",
-    "@angular/platform-browser": "2.4.1",
-    "@angular/platform-browser-dynamic": "2.4.1",
-    "@angular/router": "3.4.1",
+    "@angular/common": "2.4.3",
+    "@angular/compiler": "2.4.3",
+    "@angular/core": "2.4.3",
+    "@angular/forms": "2.4.3",
+    "@angular/http": "2.4.3",
+    "@angular/platform-browser": "2.4.3",
+    "@angular/platform-browser-dynamic": "2.4.3",
+    "@angular/router": "3.4.3",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.2",
+    "rxjs": "5.0.3",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.4",
     "stompjs": "2.3.3",
@@ -33,23 +33,23 @@
     "ng2-bootstrap": "^1.1.16-11"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.4.1",
+    "@angular/compiler-cli": "2.4.3",
     "@types/jasmine": "2.5.40",
-    "@types/node": "^6.0.42",
+    "@types/node": "^7.0.0",
     "@types/stompjs": "~2.3.0",
-    "angular-cli": "1.0.0-beta.22-1",
+    "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.0.0",
-    "karma": "1.3.0",
+    "jasmine-spec-reporter": "3.1.0",
+    "karma": "1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.4.0",
-    "protractor": "4.0.14",
+    "protractor": "5.0.0",
     "ts-node": "2.0.0",
     "tslint": "^4.0.2",
-    "typescript": "2.0.10",
-    "webdriver-manager": "11.1.0"
+    "typescript": "2.1.5",
+    "webdriver-manager": "11.1.1"
   }
 }
