--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng2-app",
+  "name": "dtrack-ui",
   "version": "1.0.0",
   "description": "Data Tracker UI",
   "author": "Bob Nadler <robert.nadler@gmail.com>",
