--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@angular/router": "4.0.0",
+    "@angular/common": "4.0.1",
+    "@angular/compiler": "4.0.1",
+    "@angular/core": "4.0.1",
+    "@angular/forms": "4.0.1",
+    "@angular/http": "4.0.1",
+    "@angular/platform-browser": "4.0.1",
+    "@angular/platform-browser-dynamic": "4.0.1",
+    "@angular/router": "4.0.1",
     "core-js": "^2.4.1",
-    "rxjs": "5.2.0",
+    "rxjs": "5.2.1-smooth",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.0",
     "stompjs": "2.3.3",
@@ -33,8 +33,8 @@
     "ng2-bootstrap": "^1.1.16-11"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "4.0.0",
-    "@types/jasmine": "2.5.46",
+    "@angular/compiler-cli": "4.0.1",
+    "@types/jasmine": "2.5.47",
     "@types/node": "^7.0.0",
     "@types/stompjs": "~2.3.0",
     "angular-cli": "1.0.0-beta.28.3",
@@ -48,8 +48,8 @@
     "karma-remap-istanbul": "^0.6.0",
     "protractor": "5.1.1",
     "ts-node": "3.0.2",
-    "tslint": "^4.0.2",
-    "typescript": "2.2.1",
+    "tslint": "^5.0.0",
+    "typescript": "2.2.2",
     "webdriver-manager": "12.0.4"
   }
 }
