--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "4.0.1",
-    "@angular/compiler": "4.0.1",
-    "@angular/core": "4.0.1",
-    "@angular/forms": "4.0.1",
-    "@angular/http": "4.0.1",
-    "@angular/platform-browser": "4.0.1",
-    "@angular/platform-browser-dynamic": "4.0.1",
-    "@angular/router": "4.0.1",
+    "@angular/common": "4.0.2",
+    "@angular/compiler": "4.0.2",
+    "@angular/core": "4.0.2",
+    "@angular/forms": "4.0.2",
+    "@angular/http": "4.0.2",
+    "@angular/platform-browser": "4.0.2",
+    "@angular/platform-browser-dynamic": "4.0.2",
+    "@angular/router": "4.0.2",
     "core-js": "^2.4.1",
-    "rxjs": "5.2.1-smooth",
+    "rxjs": "5.3.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.0",
     "stompjs": "2.3.3",
@@ -33,15 +33,15 @@
     "ng2-bootstrap": "^1.1.16-11"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "4.0.1",
+    "@angular/compiler-cli": "4.0.2",
     "@types/jasmine": "2.5.47",
     "@types/node": "^7.0.0",
     "@types/stompjs": "~2.3.0",
     "angular-cli": "1.0.0-beta.28.3",
     "codelyzer": "~3.0.0-beta.3",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "1.5.0",
+    "jasmine-spec-reporter": "4.0.0",
+    "karma": "1.6.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
