--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
     "@angular/router": "4.1.3",
-    "core-js": "^2.4.1",
-    "rxjs": "5.4.0",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.8.0",
-    "stompjs": "2.3.3",
-    "ng2-password-strength-bar": "1.1.2",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.8",
     "angular2-highcharts": "^0.5.5",
-    "ng2-bootstrap": "^1.1.16-11"
+    "core-js": "^2.4.1",
+    "ng2-bootstrap": "^1.1.16-11",
+    "ng2-password-strength-bar": "1.1.2",
+    "ngx-bootstrap": "^1.6.6",
+    "rxjs": "5.4.0",
+    "stompjs": "2.3.3",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.8.0"
   },
   "devDependencies": {
     "@angular/compiler-cli": "4.1.3",
@@ -49,7 +50,7 @@
     "protractor": "5.1.2",
     "ts-node": "3.0.4",
     "tslint": "^5.0.0",
-    "typescript": "2.3.2",
+    "typescript": "2.3.3",
     "webdriver-manager": "12.0.6"
   }
 }
