--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "4.2.3",
-    "@angular/compiler": "4.2.3",
-    "@angular/core": "4.2.3",
-    "@angular/forms": "4.2.3",
-    "@angular/http": "4.2.3",
-    "@angular/platform-browser": "4.2.3",
-    "@angular/platform-browser-dynamic": "4.2.3",
-    "@angular/router": "4.2.3",
+    "@angular/common": "^4.2.4",
+    "@angular/compiler": "^4.2.4",
+    "@angular/core": "^4.2.4",
+    "@angular/forms": "^4.2.4",
+    "@angular/http": "^4.2.4",
+    "@angular/platform-browser": "^4.2.4",
+    "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/router": "^4.2.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.8",
     "angular2-highcharts": "^0.5.5",
     "core-js": "^2.4.1",
@@ -35,20 +35,20 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.1.2",
-    "@angular/compiler-cli": "4.2.3",
-    "@types/jasmine": "2.5.52",
+    "@angular/compiler-cli": "4.2.4",
+    "@types/jasmine": "2.5.53",
     "@types/node": "^8.0.0",
     "@types/stompjs": "~2.3.0",
-    "codelyzer": "~3.0.0-beta.3",
+    "codelyzer": "~3.1.1",
     "jasmine-core": "2.6.4",
-    "jasmine-spec-reporter": "4.1.0",
+    "jasmine-spec-reporter": "4.1.1",
     "karma": "1.7.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.6.0",
     "protractor": "5.1.2",
-    "ts-node": "3.0.6",
+    "ts-node": "3.1.0",
     "tslint": "^5.0.0",
     "typescript": "2.3.4",
     "webdriver-manager": "12.0.6"
