--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.2.5",
-    "@angular/compiler": "^4.2.5",
-    "@angular/core": "^4.2.5",
-    "@angular/forms": "^4.2.5",
-    "@angular/http": "^4.2.5",
-    "@angular/platform-browser": "^4.2.5",
-    "@angular/platform-browser-dynamic": "^4.2.5",
-    "@angular/router": "^4.2.5",
+    "@angular/common": "^4.2.6",
+    "@angular/compiler": "^4.2.6",
+    "@angular/core": "^4.2.6",
+    "@angular/forms": "^4.2.6",
+    "@angular/http": "^4.2.6",
+    "@angular/platform-browser": "^4.2.6",
+    "@angular/platform-browser-dynamic": "^4.2.6",
+    "@angular/router": "^4.2.6",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.27",
     "angular2-highcharts": "^0.5.5",
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.1.16-11",
     "ng2-password-strength-bar": "1.1.2",
     "ngx-bootstrap": "^1.6.6",
-    "rxjs": "5.4.1",
+    "rxjs": "^5.4.2",
     "stompjs": "2.3.3",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.0"
   },
   "devDependencies": {
     "@angular/cli": "^1.2.0",
-    "@angular/compiler-cli": "4.2.5",
+    "@angular/compiler-cli": "4.2.6",
     "@types/jasmine": "2.5.53",
     "@types/node": "^8.0.0",
     "@types/stompjs": "~2.3.0",
@@ -48,8 +48,8 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.6.0",
     "protractor": "5.1.2",
-    "ts-node": "3.1.0",
-    "tslint": "^5.0.0",
+    "ts-node": "3.2.0",
+    "tslint": "^5.5.0",
     "typescript": "2.4.1",
     "webdriver-manager": "12.0.6"
   }
