--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "@angular/platform-browser": "^4.2.6",
     "@angular/platform-browser-dynamic": "^4.2.6",
     "@angular/router": "^4.2.6",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.27",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.28",
     "angular2-highcharts": "^0.5.5",
     "core-js": "^2.4.1",
-    "ng2-bootstrap": "^1.1.16-11",
-    "ng2-password-strength-bar": "1.1.2",
-    "ngx-bootstrap": "^1.6.6",
+    "ng2-bootstrap": "^1.6.3",
+    "ng2-password-strength-bar": "^1.1.2",
+    "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.4.2",
-    "stompjs": "2.3.3",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.8.0"
+    "stompjs": "^2.3.3",
+    "ts-helpers": "^1.1.2",
+    "zone.js": "^0.8.13"
   },
   "devDependencies": {
-    "@angular/cli": "^1.2.0",
+    "@angular/cli": "^1.2.1",
     "@angular/compiler-cli": "4.2.6",
     "@types/jasmine": "2.5.53",
     "@types/node": "^8.0.0",
