--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.3.4",
-    "@angular/compiler": "^4.3.4",
-    "@angular/core": "^4.3.4",
-    "@angular/forms": "^4.3.4",
-    "@angular/http": "^4.3.4",
-    "@angular/platform-browser": "^4.3.4",
-    "@angular/platform-browser-dynamic": "^4.3.4",
-    "@angular/router": "^4.3.4",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.30",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/router": "^4.3.6",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2",
     "angular2-highcharts": "^0.5.5",
     "core-js": "^2.5.0",
     "ng2-bootstrap": "^1.6.3",
     "ng2-password-strength-bar": "^1.1.2",
-    "ngx-bootstrap": "^1.8.1",
+    "ngx-bootstrap": "^1.9.1",
     "rxjs": "^5.4.3",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
-    "zone.js": "^0.8.16"
+    "zone.js": "^0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "^1.3.1",
-    "@angular/compiler-cli": "4.3.5",
-    "@types/jasmine": "2.5.53",
-    "@types/node": "^8.0.0",
+    "@angular/cli": "^1.3.2",
+    "@angular/compiler-cli": "4.3.6",
+    "@types/jasmine": "2.5.54",
+    "@types/node": "^8.0.25",
     "@types/stompjs": "~2.3.0",
     "codelyzer": "~3.1.1",
-    "jasmine-core": "2.7.0",
+    "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "1.7.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -49,7 +49,7 @@
     "karma-remap-istanbul": "^0.6.0",
     "protractor": "5.1.2",
     "ts-node": "3.3.0",
-    "tslint": "^5.6.0",
+    "tslint": "^5.7.0",
     "typescript": "2.4.2",
     "webdriver-manager": "12.0.6"
   }
