--- a/package.json
+++ b/package.json
@@ -14,35 +14,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.3.6",
-    "@angular/compiler": "^4.3.6",
-    "@angular/core": "^4.3.6",
-    "@angular/forms": "^4.3.6",
-    "@angular/http": "^4.3.6",
-    "@angular/platform-browser": "^4.3.6",
-    "@angular/platform-browser-dynamic": "^4.3.6",
-    "@angular/router": "^4.3.6",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2",
+    "@angular/common": "^4.4.0-RC.0",
+    "@angular/compiler": "^4.4.0-RC.0",
+    "@angular/core": "^4.4.0-RC.0",
+    "@angular/forms": "^4.4.0-RC.0",
+    "@angular/http": "^4.4.0-RC.0",
+    "@angular/platform-browser": "^4.4.0-RC.0",
+    "@angular/platform-browser-dynamic": "^4.4.0-RC.0",
+    "@angular/router": "^4.4.0-RC.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.4",
     "angular2-highcharts": "^0.5.5",
-    "core-js": "^2.5.0",
+    "core-js": "^2.5.1",
     "ng2-bootstrap": "^1.6.3",
     "ng2-password-strength-bar": "^1.1.2",
-    "ngx-bootstrap": "^1.9.1",
+    "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.4.3",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "^1.3.2",
-    "@angular/compiler-cli": "4.3.6",
+    "@angular/cli": "^1.4.1",
+    "@angular/compiler-cli": "4.4.0-RC.0",
     "@types/jasmine": "2.5.54",
-    "@types/node": "^8.0.25",
+    "@types/node": "^8.0.28",
     "@types/stompjs": "~2.3.0",
     "codelyzer": "~3.1.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "1.7.0",
+    "karma": "1.7.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
@@ -50,7 +50,7 @@
     "protractor": "5.1.2",
     "ts-node": "3.3.0",
     "tslint": "^5.7.0",
-    "typescript": "2.4.2",
+    "typescript": "2.5.2",
     "webdriver-manager": "12.0.6"
   }
 }
