--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.4.0-RC.0",
-    "@angular/compiler": "^4.4.0-RC.0",
-    "@angular/core": "^4.4.0-RC.0",
-    "@angular/forms": "^4.4.0-RC.0",
-    "@angular/http": "^4.4.0-RC.0",
-    "@angular/platform-browser": "^4.4.0-RC.0",
-    "@angular/platform-browser-dynamic": "^4.4.0-RC.0",
-    "@angular/router": "^4.4.0-RC.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.4",
+    "@angular/common": "^4.4.1",
+    "@angular/compiler": "^4.4.1",
+    "@angular/core": "^4.4.1",
+    "@angular/forms": "^4.4.1",
+    "@angular/http": "^4.4.1",
+    "@angular/platform-browser": "^4.4.1",
+    "@angular/platform-browser-dynamic": "^4.4.1",
+    "@angular/router": "^4.4.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular2-highcharts": "^0.5.5",
     "core-js": "^2.5.1",
     "ng2-bootstrap": "^1.6.3",
@@ -34,12 +34,12 @@
     "zone.js": "^0.8.17"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.1",
-    "@angular/compiler-cli": "4.4.0-RC.0",
-    "@types/jasmine": "2.5.54",
+    "@angular/cli": "^1.4.2",
+    "@angular/compiler-cli": "4.4.1",
+    "@types/jasmine": "2.6.0",
     "@types/node": "^8.0.28",
     "@types/stompjs": "~2.3.0",
-    "codelyzer": "~3.1.1",
+    "codelyzer": "~3.2.0",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "1.7.1",
