--- a/package.json
+++ b/package.json
@@ -14,32 +14,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^4.4.4",
-    "@angular/compiler": "^4.4.4",
-    "@angular/core": "^4.4.4",
-    "@angular/forms": "^4.4.4",
-    "@angular/http": "^4.4.4",
-    "@angular/platform-browser": "^4.4.4",
-    "@angular/platform-browser-dynamic": "^4.4.4",
-    "@angular/router": "^4.4.4",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angular2-highcharts": "^0.5.5",
     "core-js": "^2.5.1",
     "ng2-bootstrap": "^1.6.3",
     "ng2-password-strength-bar": "^1.1.3",
     "ngx-bootstrap": "^1.9.3",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.0",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.4.5",
-    "@angular/compiler-cli": "4.4.4",
+    "@angular/cli": "^1.4.9",
+    "@angular/compiler-cli": "4.4.6",
     "@types/jasmine": "2.6.0",
-    "@types/node": "^8.0.32",
+    "@types/node": "^8.0.46",
     "@types/stompjs": "~2.3.0",
-    "codelyzer": "~3.2.0",
+    "codelyzer": "^3.2.1",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "1.7.1",
@@ -47,9 +47,9 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.6.0",
-    "protractor": "5.1.2",
+    "protractor": "5.2.0",
     "ts-node": "3.3.0",
-    "tslint": "^5.7.0",
+    "tslint": "^5.8.0",
     "typescript": "2.5.3",
     "webdriver-manager": "12.0.6"
   }
