--- a/package.json
+++ b/package.json
@@ -14,43 +14,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^5.0.3",
-    "@angular/compiler": "^5.0.3",
-    "@angular/core": "^5.0.3",
-    "@angular/forms": "^5.0.3",
-    "@angular/http": "^5.0.3",
-    "@angular/platform-browser": "^5.0.3",
-    "@angular/platform-browser-dynamic": "^5.0.3",
-    "@angular/router": "^5.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "@angular/common": "^5.1.2",
+    "@angular/compiler": "^5.1.2",
+    "@angular/core": "^5.1.2",
+    "@angular/forms": "^5.1.2",
+    "@angular/http": "^5.1.2",
+    "@angular/platform-browser": "^5.1.2",
+    "@angular/platform-browser-dynamic": "^5.1.2",
+    "@angular/router": "^5.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
     "angular2-highcharts": "^0.5.5",
-    "core-js": "^2.5.1",
+    "core-js": "^2.5.3",
     "ng2-bootstrap": "^1.6.3",
-    "ng2-password-strength-bar": "^1.1.3",
-    "ngx-bootstrap": "^2.0.0-beta.9",
-    "rxjs": "^5.5.2",
+    "ng2-password-strength-bar": "^1.2.0",
+    "ngx-bootstrap": "^2.0.0-rc.0",
+    "rxjs": "^5.5.6",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.4",
-    "@angular/compiler-cli": "5.0.3",
+    "@angular/cli": "^1.6.2",
+    "@angular/compiler-cli": "5.1.1",
     "@types/jasmine": "2.8.2",
-    "@types/node": "^8.0.53",
+    "@types/node": "^8.5.2",
     "@types/stompjs": "~2.3.0",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^4.0.2",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "1.7.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
+    "karma-jasmine": "^1.1.1",
     "karma-remap-istanbul": "^0.6.0",
-    "protractor": "5.2.0",
-    "ts-node": "3.3.0",
+    "protractor": "5.2.2",
+    "ts-node": "4.0.2",
     "tslint": "^5.8.0",
-    "typescript": "2.6.1",
+    "typescript": "2.6.2",
     "webdriver-manager": "12.0.6"
   }
 }
