--- a/package.json
+++ b/package.json
@@ -14,29 +14,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/router": "^5.2.10",
-    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angular2-highcharts": "^0.5.5",
     "core-js": "^2.5.5",
+    "net": "^1.0.2",
     "ng2-password-strength-bar": "^1.2.0",
     "ngx-bootstrap": "^2.0.4",
-    "rxjs": "^5.5.8",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "5.2.10",
-    "@types/jasmine": "2.8.6",
-    "@types/node": "^9.6.6",
+    "@angular/cli": "^6.0.0",
+    "@angular/compiler-cli": "6.0.0",
+    "@types/jasmine": "2.8.7",
+    "@types/node": "^10.0.4",
     "@types/stompjs": "^2.3.2",
     "codelyzer": "^4.3.0",
     "jasmine-core": "3.1.0",
@@ -44,12 +46,13 @@
     "karma": "2.0.2",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.1",
+    "karma-jasmine": "^1.1.2",
     "karma-remap-istanbul": "^0.6.0",
     "protractor": "5.3.1",
-    "ts-node": "6.0.0",
-    "tslint": "^5.9.1",
-    "typescript": "2.8.3",
-    "webdriver-manager": "12.0.6"
+    "ts-node": "6.0.2",
+    "tslint": "^5.10.0",
+    "typescript": "2.7.2",
+    "webdriver-manager": "12.0.6",
+    "@angular-devkit/build-angular": "~0.6.0"
   }
 }
