--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/http": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
-    "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
+    "@angular/common": "^6.0.1",
+    "@angular/compiler": "^6.0.1",
+    "@angular/core": "^6.0.1",
+    "@angular/forms": "^6.0.1",
+    "@angular/http": "^6.0.1",
+    "@angular/platform-browser": "^6.0.1",
+    "@angular/platform-browser-dynamic": "^6.0.1",
+    "@angular/router": "^6.0.1",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angular2-highcharts": "^0.5.5",
-    "core-js": "^2.5.5",
+    "core-js": "^2.5.6",
     "net": "^1.0.2",
     "ng2-password-strength-bar": "^1.2.0",
-    "ngx-bootstrap": "^2.0.4",
+    "ngx-bootstrap": "^2.0.5",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "stompjs": "^2.3.3",
@@ -35,11 +35,12 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.0",
-    "@angular/compiler-cli": "6.0.0",
+    "@angular-devkit/build-angular": "^0.6.1",
+    "@angular/cli": "^6.0.1",
+    "@angular/compiler-cli": "6.0.1",
     "@types/jasmine": "2.8.7",
-    "@types/node": "^10.0.4",
-    "@types/stompjs": "^2.3.2",
+    "@types/node": "^10.0.8",
+    "@types/stompjs": "^2.3.3",
     "codelyzer": "^4.3.0",
     "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -48,11 +49,10 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.1.2",
     "karma-remap-istanbul": "^0.6.0",
-    "protractor": "5.3.1",
-    "ts-node": "6.0.2",
+    "protractor": "5.3.2",
+    "ts-node": "6.0.3",
     "tslint": "^5.10.0",
     "typescript": "2.7.2",
-    "webdriver-manager": "12.0.6",
-    "@angular-devkit/build-angular": "~0.6.0"
+    "webdriver-manager": "12.0.6"
   }
 }
