--- a/package.json
+++ b/package.json
@@ -14,34 +14,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^6.1.2",
-    "@angular/compiler": "^6.1.2",
-    "@angular/core": "^6.1.2",
-    "@angular/forms": "^6.1.2",
-    "@angular/http": "^6.1.2",
-    "@angular/platform-browser": "^6.1.2",
-    "@angular/platform-browser-dynamic": "^6.1.2",
-    "@angular/router": "^6.1.2",
+    "@angular/common": "^6.1.3",
+    "@angular/compiler": "^6.1.3",
+    "@angular/core": "^6.1.3",
+    "@angular/forms": "^6.1.3",
+    "@angular/http": "^6.1.3",
+    "@angular/platform-browser": "^6.1.3",
+    "@angular/platform-browser-dynamic": "^6.1.3",
+    "@angular/router": "^6.1.3",
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "angular2-highcharts": "^0.5.5",
     "core-js": "^2.5.6",
     "net": "^1.0.2",
     "ng2-password-strength-bar": "^1.2.1",
+    "bootstrap": "~4.1.3",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-modal-dialog": "^3.0.0",
     "rxjs": "^6.2.2",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.7.3",
-    "@angular/cli": "^6.1.3",
-    "@angular/compiler-cli": "6.1.2",
+    "@angular-devkit/build-angular": "^0.7.4",
+    "@angular/cli": "^6.1.4",
+    "@angular/compiler-cli": "6.1.3",
     "@types/jasmine": "2.8.8",
-    "@types/node": "^10.7.0",
+    "@types/node": "^10.7.1",
     "@types/stompjs": "^2.3.3",
     "codelyzer": "^4.4.4",
-    "jasmine-core": "3.2.0",
+    "jasmine-core": "3.2.1",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "3.0.0",
     "karma-chrome-launcher": "^2.0.0",
