Initial introduction of PrimeNG Toast

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^6.1.3",
     "@angular/common": "^6.1.3",
     "@angular/compiler": "^6.1.3",
     "@angular/core": "^6.1.3",
@@ -24,12 +25,14 @@
     "@angular/router": "^6.1.3",
     "@ng-bootstrap/ng-bootstrap": "^3.0.0",
     "angular2-highcharts": "^0.5.5",
+    "bootstrap": "~4.1.3",
     "core-js": "^2.5.6",
     "net": "^1.0.2",
     "ng2-password-strength-bar": "^1.2.1",
-    "bootstrap": "~4.1.3",
     "ngx-bootstrap": "^3.0.1",
     "ngx-modal-dialog": "^3.0.0",
+    "primeicons": "^1.0.0-beta.10",
+    "primeng": "^6.1.2",
     "rxjs": "^6.2.2",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
