--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,10 @@
             ],
             "styles": [
               "src/assets/styles/bootstrap.css",
-              "src/assets/styles/main.css"
+              "src/assets/styles/main.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
               "src/assets/scripts/jquery-3.1.0.min.js"
