--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.4",
-    "@angular/common": "^6.1.4",
-    "@angular/compiler": "^6.1.4",
-    "@angular/core": "^6.1.4",
-    "@angular/forms": "^6.1.4",
-    "@angular/http": "^6.1.4",
-    "@angular/platform-browser": "^6.1.4",
-    "@angular/platform-browser-dynamic": "^6.1.4",
-    "@angular/router": "^6.1.4",
-    "@ng-bootstrap/ng-bootstrap": "^3.1.0",
+    "@angular/animations": "^6.1.7",
+    "@angular/common": "^6.1.7",
+    "@angular/compiler": "^6.1.7",
+    "@angular/core": "^6.1.7",
+    "@angular/forms": "^6.1.7",
+    "@angular/http": "^6.1.7",
+    "@angular/platform-browser": "^6.1.7",
+    "@angular/platform-browser-dynamic": "^6.1.7",
+    "@angular/router": "^6.1.7",
+    "@ng-bootstrap/ng-bootstrap": "^3.2.0",
     "angular2-highcharts": "^0.5.5",
     "bootstrap": "~4.1.3",
     "core-js": "^2.5.6",
@@ -32,28 +32,29 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-modal-dialog": "^3.0.0",
     "primeicons": "^1.0.0-beta.10",
-    "primeng": "^6.1.2",
-    "rxjs": "^6.2.2",
+    "primeng": "^6.1.3",
+    "rxjs": "^6.3.2",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.7.5",
-    "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "6.1.4",
+    "@angular-devkit/build-angular": "^0.8.2",
+    "@angular/cli": "^6.2.2",
+    "@angular/compiler-cli": "6.1.7",
     "@types/jasmine": "2.8.8",
-    "@types/node": "^10.9.2",
-    "@types/stompjs": "^2.3.3",
+    "@types/node": "^10.9.4",
+    "@types/stompjs": "^2.3.4",
+    "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^4.4.4",
     "jasmine-core": "3.2.1",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "3.0.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.2",
-    "karma-remap-istanbul": "^0.6.0",
-    "protractor": "5.4.0",
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "5.4.1",
     "ts-node": "7.0.1",
     "tslint": "^5.11.0",
     "typescript": "2.9.2",
