--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
+    "build": "ng build --prod",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.7",
-    "@angular/common": "^6.1.7",
-    "@angular/compiler": "^6.1.7",
-    "@angular/core": "^6.1.7",
-    "@angular/forms": "^6.1.7",
-    "@angular/http": "^6.1.7",
-    "@angular/platform-browser": "^6.1.7",
-    "@angular/platform-browser-dynamic": "^6.1.7",
-    "@angular/router": "^6.1.7",
-    "@ng-bootstrap/ng-bootstrap": "^3.2.0",
+    "@angular/animations": "^6.1.9",
+    "@angular/common": "^6.1.9",
+    "@angular/compiler": "^6.1.9",
+    "@angular/core": "^6.1.9",
+    "@angular/forms": "^6.1.9",
+    "@angular/http": "^6.1.9",
+    "@angular/platform-browser": "^6.1.9",
+    "@angular/platform-browser-dynamic": "^6.1.9",
+    "@angular/router": "^6.1.9",
+    "@ng-bootstrap/ng-bootstrap": "^3.2.2",
     "angular2-highcharts": "^0.5.5",
     "bootstrap": "~4.1.3",
     "core-js": "^2.5.6",
@@ -32,20 +33,20 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-modal-dialog": "^3.0.0",
     "primeicons": "^1.0.0-beta.10",
-    "primeng": "^6.1.3",
-    "rxjs": "^6.3.2",
+    "primeng": "^6.1.4",
+    "rxjs": "^6.3.3",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.2",
-    "@angular/cli": "^6.2.2",
+    "@angular-devkit/build-angular": "^0.8.3",
+    "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "6.1.7",
     "@types/jasmine": "2.8.8",
-    "@types/node": "^10.9.4",
+    "@types/jasminewd2": "^2.0.4",
+    "@types/node": "^10.11.3",
     "@types/stompjs": "^2.3.4",
-    "@types/jasminewd2": "~2.0.3",
     "codelyzer": "^4.4.4",
     "jasmine-core": "3.2.1",
     "jasmine-spec-reporter": "4.2.1",
