--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,10 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <executable>ng</executable>
+                    <executable>npm</executable>
                     <arguments>
-                        <argument>build</argument>
+                      <argument>run</argument>
+                      <argument>build</argument>
                     </arguments>
                     <workingDirectory>.</workingDirectory>
                 </configuration>
