--- a/package.json
+++ b/package.json
@@ -15,50 +15,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
-    "@ng-bootstrap/ng-bootstrap": "^3.3.0",
+    "@angular/animations": "^7.0.1",
+    "@angular/common": "^7.0.1",
+    "@angular/compiler": "^7.0.1",
+    "@angular/core": "^7.0.1",
+    "@angular/forms": "^7.0.1",
+    "@angular/http": "^7.0.1",
+    "@angular/platform-browser": "^7.0.1",
+    "@angular/platform-browser-dynamic": "^7.0.1",
+    "@angular/router": "^7.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "angular2-highcharts": "^0.5.5",
     "bootstrap": "~4.1.3",
-    "core-js": "^2.5.6",
+    "core-js": "^2.5.7",
     "net": "^1.0.2",
     "ng2-password-strength-bar": "^1.2.1",
     "ngx-bootstrap": "^3.0.1",
     "ngx-modal-dialog": "^3.0.0",
-    "primeicons": "^1.0.0-beta.10",
-    "primeng": "^6.1.4",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.0.0-beta.1",
     "rxjs": "^6.3.3",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.5",
-    "@angular/cli": "^6.2.5",
-    "@angular/compiler-cli": "6.1.10",
+    "@angular-devkit/build-angular": "^0.10.3",
+    "@angular/cli": "^7.0.3",
+    "@angular/compiler-cli": "7.0.1",
     "@types/jasmine": "2.8.9",
     "@types/jasminewd2": "^2.0.5",
-    "@types/node": "^10.11.7",
+    "@types/node": "^10.12.0",
     "@types/stompjs": "^2.3.4",
     "codelyzer": "^4.5.0",
-    "jasmine-core": "3.2.1",
+    "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "~2.0.4",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^1.3.1",
     "protractor": "5.4.1",
     "ts-node": "7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "2.9.2",
+    "typescript": "3.1.3",
     "webdriver-manager": "12.1.0"
   }
 }
