--- a/package.json
+++ b/package.json
@@ -15,42 +15,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.0",
-    "@angular/common": "^7.1.0",
-    "@angular/compiler": "^7.1.0",
-    "@angular/core": "^7.1.0",
-    "@angular/forms": "^7.1.0",
-    "@angular/http": "^7.1.0",
-    "@angular/platform-browser": "^7.1.0",
-    "@angular/platform-browser-dynamic": "^7.1.0",
-    "@angular/router": "^7.1.0",
+    "@angular/animations": "^7.1.2",
+    "@angular/common": "^7.1.2",
+    "@angular/compiler": "^7.1.2",
+    "@angular/core": "^7.1.2",
+    "@angular/forms": "^7.1.2",
+    "@angular/http": "^7.1.2",
+    "@angular/platform-browser": "^7.1.2",
+    "@angular/platform-browser-dynamic": "^7.1.2",
+    "@angular/router": "^7.1.2",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "angular2-highcharts": "^0.5.5",
     "bootstrap": "~4.1.3",
-    "core-js": "^2.5.7",
+    "core-js": "^2.6.0",
     "net": "^1.0.2",
     "ng2-password-strength-bar": "^1.2.2",
     "ngx-bootstrap": "^3.1.2",
     "ngx-modal-dialog": "^3.0.0",
     "primeicons": "^1.0.0",
-    "primeng": "^7.0.0-beta.1",
+    "primeng": "^7.0.0",
     "rxjs": "^6.3.3",
     "stompjs": "^2.3.3",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.6",
-    "@angular/cli": "^7.0.6",
-    "@angular/compiler-cli": "7.1.0",
+    "@angular-devkit/build-angular": "^0.11.2",
+    "@angular/cli": "^7.1.2",
+    "@angular/compiler-cli": "7.1.2",
     "@types/jasmine": "3.3.0",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^10.12.10",
+    "@types/node": "^10.12.12",
     "@types/stompjs": "^2.3.4",
     "codelyzer": "^4.5.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^3.1.3",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.4",
     "karma-jasmine": "~2.0.1",
